styles.css and script.js updated to evaluate user name and password regex pattern

--- a/index.html
+++ b/index.html
@@ -63,12 +63,14 @@ Date: May 1, 2018
 
 						<div class="email-container input-boxes">
 							<i class="fas fa-user"></i>
-							<input type="email" name="user-email" placeholder="Enter Username" required>
+							<input class="email-input" type="email" name="user-email" placeholder="Enter Username">
+							<p>Email must be a valid address, e.g. me@URMC.Rochester.edu</p>
 						</div>
 
 						<div class="password-container input-boxes">
 							<i class="fas fa-lock"></i>
-							<input type="password" name="password" placeholder="Enter Password" required>	
+							<input class="password-input" type="password" name="password" placeholder="Enter Password">	
+							<p>Password must be alphanumeric(@, _ and - are allowed) and be 8 - 20 characters</p>
 						</div>	
 
 						<div class="login-button-container">
