--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Date: May 1, 2018
 						<div class="password-container input-boxes">
 							<i class="fas fa-lock"></i>
 							<input class="password-input" type="password" name="password" placeholder="Enter Password">	
-							<p>Password must be alphanumeric(@, _ and - are allowed) and be 8 - 20 characters</p>
+							<p>Password must be alphanumeric(@, _, ! and - are allowed) and be 8 - 20 characters</p>
 						</div>	
 
 						<div class="login-button-container">
